num_enum/tests/try_build/compile_fail/multiple_crate_path.rs
#[derive(::num_enum::TryFromPrimitive)]
#[num_enum(crate = ::num_enum, crate = ::num_enum)]
enum Enum {
    Zero = 0,
}

fn main() { }
