num_enum/tests/try_build/compile_fail/multiple_crate_path.stderr
error: Expected exactly one `crate` argument
 --> tests/try_build/compile_fail/multiple_crate_path.rs:2:11
  |
2 | #[num_enum(crate = ::num_enum, crate = ::num_enum)]
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
